--- a/style.css
+++ b/style.css
@@ -65,9 +65,6 @@
     background: var(--yellow) !important;
 }
 
-span {
-    color: var(--primary);
-}
 
 /* base grid */
 
@@ -95,10 +92,14 @@ body {
   transition: transform 0.3s ease-in-out;
 }
 
+span {
+    color: var(--primary);
+}
+
 /* header & nav */
 
 h1 {
-  font-size: clamp(2.5rem, 6vw, 8vw);
+  font-size: 2.39rem;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -244,10 +245,10 @@ nav button:not(.clicked):hover {
 }
 
 .rate-button {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
   background-color: var(--black);
-  font-size: var(--fs-300);
-  color: var(--white);
-  padding: 5px 10px;
   }
 
 .circle-button {
@@ -264,11 +265,11 @@ nav button:not(.clicked):hover {
 
 /* media query */
 
-@media (min-width: 768px) {
+@media (min-width: 1080px) {
 
 .content-grid {
   display: grid;
-  grid-template-columns: [margin-start] 5rem [sidebar-start] 1fr [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
+  grid-template-columns: [margin-start] 5rem [sidebar-start] 230px [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
   gap: 2rem;
   margin: 3rem 0 3rem 0;
 }
@@ -282,7 +283,6 @@ nav button:not(.clicked):hover {
 }
 
 h1 {
-    font-size: 2.7vw;
     text-align: start;
 }
 
@@ -297,3 +297,4 @@ nav {
     gap: 1rem
     }
 }
+
