simplified js/css

--- a/style.css
+++ b/style.css
@@ -99,11 +99,10 @@ span {
 /* header & nav */
 
 h1 {
-  font-size: 2.39rem;
+  font-size: 2.5rem;
   text-align: center;
   margin: 0;
   padding: 0;
-  margin-bottom: 1.5rem;
 }
 
 
@@ -111,7 +110,7 @@ nav {
     width: 100%;
     flex-direction: column;
     gap: 1rem;
-    margin-bottom: 2rem;
+    margin-block: 1.5rem 2.5rem;
 }
 
 .main-nav-container, .sub-nav-container {
@@ -269,7 +268,7 @@ nav button:not(.clicked):hover {
 
 .content-grid {
   display: grid;
-  grid-template-columns: [margin-start] 5rem [sidebar-start] 230px [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
+  grid-template-columns: [margin-start] 5rem [sidebar-start] 250px [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
   gap: 2rem;
   margin: 3rem 0 3rem 0;
 }
@@ -284,12 +283,14 @@ nav button:not(.clicked):hover {
 
 h1 {
     text-align: start;
+    line-height: .8
 }
 
 nav {
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
+    margin-top: 2rem;
     }
 
 .main-nav-container, .sub-nav-container {
