--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 
   --white: rgba(247, 245, 243, 1);
   --black: rgba(28, 28, 28, 1);
+  --grey: rgb(154, 155, 157, 1);
   --primary: rgba(30, 190, 100, 1);
   --yellow: rgba(255, 200, 10, 1);
   --orange: rgba(235, 100, 20, 1);
@@ -68,7 +69,11 @@
 }
 
 .neutral {
-    background: var(--yellow) !important;
+    background: var(--grey) !important;
+}
+
+.positive {
+  background: var(--yellow) !important;
 }
 
 
@@ -77,9 +82,8 @@
 .content-grid {
       grid-template-columns: 1fr; 
       grid-template-rows: auto; 
-      margin: 2rem 5rem 2rem 5rem;
+      margin: 2rem 5rem;
     }
-
 
 
 body {
@@ -105,7 +109,7 @@ span {
 /* header & nav */
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2.6rem;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -120,12 +124,13 @@ nav {
 }
 
 .main-nav-container, .sub-nav-container {
-    display: flex;
     justify-content: center;
     gap: 2rem
 }
 
 .sub-nav-container {
+  justify-content: justify;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -188,10 +193,9 @@ nav {
 
 .headline {
   font-size: var(--fs-500);
-    /* Limit .headline to 4 lines */
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4; /* Adjust the number of lines as needed */
+    -webkit-line-clamp: 4; 
     overflow: hidden;
 
 
@@ -202,10 +206,10 @@ nav {
   font-size: var(--fs-400);
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3; /* Adjust the number of lines as needed */
+  -webkit-line-clamp: 5; 
   overflow: hidden;
-  text-overflow: ellipsis; /* Add ellipsis for overflowed text */
-  white-space: normal; /* Allow wrapping within the specified number of lines */
+  text-overflow: ellipsis; 
+  white-space: normal; 
 
 }
 
@@ -251,7 +255,7 @@ nav button:not(.clicked):hover {
     transform: scale(1.05);
 }
 
-#country button:hover, #topic button:hover {
+#country button:hover, #category button:hover {
   background-color: var(--accent);
 }
 
@@ -288,9 +292,9 @@ nav button:not(.clicked):hover {
 
 .content-grid {
   display: grid;
-  grid-template-columns: [margin-start] 5rem [sidebar-start] 250px [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
-  gap: 2rem;
-  margin: 3rem 0 3rem 0;
+  grid-template-columns: [margin-start] 5rem [sidebar-start] 230px [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
+  gap: 3rem;
+  margin: 3rem 0;
 }
 
 .sidebar {
@@ -302,20 +306,27 @@ nav button:not(.clicked):hover {
 }
 
 h1 {
-    text-align: start;
-    line-height: 1.2
+    line-height: 1.2;
+    transform: translateX(-5px)
 }
 
 nav {
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: flex-start;
     margin-top: 2rem;
+    gap: .5rem
     }
 
 .main-nav-container, .sub-nav-container {
     flex-direction: column;
     gap: 1rem
     }
+
+.sub-nav-container {
+    flex-wrap: nowrap;
+  }
+
+  
 }
 
