--- a/style.css
+++ b/style.css
@@ -109,29 +109,10 @@ span {
 /* header & nav */
 
 h1 {
-  font-size: 2.6rem;
+  font-size: 2.5rem;
   text-align: center;
   margin: 0;
   padding: 0;
-}
-
-
-nav {
-    width: 100%;
-    flex-direction: column;
-    gap: 1rem;
-    margin-block: 1.5rem 2.5rem;
-}
-
-.main-nav-container, .sub-nav-container {
-    justify-content: center;
-    gap: 2rem
-}
-
-.sub-nav-container {
-  justify-content: justify;
-  flex-wrap: wrap;
-  gap: 1rem;
 }
 
 
@@ -139,7 +120,7 @@ nav {
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
 
 }
@@ -214,7 +195,7 @@ nav {
 }
 
 
-/* buttons */
+/* buttons
 
 button {
   font-family: inherit;
@@ -227,41 +208,9 @@ button {
 
 }
 
-/* nav buttons  */
-
-nav button {
-    color:  var(--white);
-    padding: 10px 15px;
-    border-radius: 20px;
-}
-
-.main-nav-container button {
-    background-color:var(--black);
-    font-size: var(--fs-400);
-    text-transform: uppercase;
-}
-
-.sub-nav-container button {
-    background-color: rgb(53, 55, 52);
-    font-size: var(--fs-300);
-    text-transform: lowercase;
-}
-
-.main-nav-container button:hover {
-  background-color: var(--primary);
-}
-
-nav button:not(.clicked):hover {
-    transform: scale(1.05);
-}
-
-#country button:hover, #category button:hover {
-  background-color: var(--accent);
-}
-
 /* rate buttons  */
 
-.rating-container {
+/* .rating-container {
   margin-top: 1rem;
   padding: 0px 0px 0px 15px;
   gap: 1rem;
@@ -284,6 +233,87 @@ nav button:not(.clicked):hover {
   gap: 1rem;
   justify-content: flex-start;
   align-items: center;
+} */ 
+
+
+
+input[type="radio"] {
+  display: none;
+}
+
+nav {
+  justify-content: flex-start;
+  margin-block: 2rem;
+  width: 100%;
+}
+.nav-container {
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: .5rem
+}
+
+.main-nav-container, .sub-nav-container {
+  flex-grow: 1; /* Allows these containers to grow as needed */
+}
+
+.main-nav-container {
+  align-items: center;
+}
+.sub-nav-container {
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  gap: .5rem;
+  margin-top: .5rem
+}
+
+.sub-nav-container .button {
+  font-size: .684rem;
+}
+
+input[type="radio"]:checked + label.button, label.button:hover {
+  background-color: var(--accent);
+  color: var(--white);
+}
+
+.button {
+    font-family: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    text-transform: lowercase;
+    white-space: nowrap;
+
+    margin: 0;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: rgb(50, 50, 50);
+    color: var(--white);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: background-color 0.3s ease;
+}
+
+.main-button {
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  background-color: var(--black);
+}
+
+.main-button:hover {
+  background: var(--primary);
+}
+
+.submit {
+  flex-grow: 0; 
+
+  background-color: var(--accent);
+  text-transform: lowercase;
 }
 
 /* media query */
@@ -292,13 +322,18 @@ nav button:not(.clicked):hover {
 
 .content-grid {
   display: grid;
-  grid-template-columns: [margin-start] 5rem [sidebar-start] 230px [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
+  grid-template-columns: [margin-start] 5rem [sidebar-start] 1fr [sidebar-end content-start] 3.5fr [content-end margin-end] 5rem;
   gap: 3rem;
   margin: 3rem 0;
 }
 
 .sidebar {
   grid-column: sidebar-start / sidebar-end;
+  display: flex; /* Make sidebar a flex container */
+  flex-direction: column; /* Align children vertically */
+  align-items: center; /* Center children horizontally */
+
+
 }
 
 .content {
@@ -307,26 +342,27 @@ nav button:not(.clicked):hover {
 
 h1 {
     line-height: 1.2;
-    transform: translateX(-5px)
 }
 
 nav {
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    margin-top: 2rem;
-    gap: .5rem
-    }
-
-.main-nav-container, .sub-nav-container {
-    flex-direction: column;
-    gap: 1rem
-    }
-
-.sub-nav-container {
-    flex-wrap: nowrap;
-  }
-
-  
+  justify-content: flex-start;
+  width: 100%;
 }
 
+.nav-container {
+  flex-direction: column; 
+  align-items: center;
+  width: 100%; 
+  gap: 1.5rem
+}
+
+.main-nav-container, .sub-nav-container, .submit {
+  flex-grow: 1; 
+  width: 100%;
+}
+
+.sub-nav-container {
+  flex-direction: row;
+}
+
+}
