--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  gap: rem
+  gap: 1.5rem
 }
 
 .main-nav-container {
@@ -281,6 +281,32 @@ input[type="radio"]:checked + label.button, label.button:hover {
   white-space: normal; 
 
 }
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1000; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Optional: for dark overlay */
+  align-items: center;
+  justify-content: center;
+
+}
+
+
+.modal-content {
+  width: 50%;
+  background: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)}
+
+.blur-effect {
+  filter: blur(10px);
+  pointer-events: none;
+}
+
 
 
 /* buttons
